; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/extr_splitter.c_vlc_vidsplit_window_Closed.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/extr_splitter.c_vlc_vidsplit_window_Closed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.vlc_vidsplit_part* }
%struct.vlc_vidsplit_part = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @vlc_vidsplit_window_Closed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_vidsplit_window_Closed(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.vlc_vidsplit_part*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.vlc_vidsplit_part*, %struct.vlc_vidsplit_part** %7, align 8
  store %struct.vlc_vidsplit_part* %8, %struct.vlc_vidsplit_part** %3, align 8
  %9 = load %struct.vlc_vidsplit_part*, %struct.vlc_vidsplit_part** %3, align 8
  %10 = getelementptr inbounds %struct.vlc_vidsplit_part, %struct.vlc_vidsplit_part* %9, i32 0, i32 0
  %11 = call i32 @vlc_sem_wait(i32* %10)
  %12 = load %struct.vlc_vidsplit_part*, %struct.vlc_vidsplit_part** %3, align 8
  %13 = getelementptr inbounds %struct.vlc_vidsplit_part, %struct.vlc_vidsplit_part* %12, i32 0, i32 1
  %14 = load i32*, i32** %13, align 8
  store i32* %14, i32** %4, align 8
  %15 = load %struct.vlc_vidsplit_part*, %struct.vlc_vidsplit_part** %3, align 8
  %16 = getelementptr inbounds %struct.vlc_vidsplit_part, %struct.vlc_vidsplit_part* %15, i32 0, i32 1
  store i32* null, i32** %16, align 8
  %17 = load %struct.vlc_vidsplit_part*, %struct.vlc_vidsplit_part** %3, align 8
  %18 = getelementptr inbounds %struct.vlc_vidsplit_part, %struct.vlc_vidsplit_part* %17, i32 0, i32 0
  %19 = call i32 @vlc_sem_post(i32* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %1
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @vout_display_Delete(i32* %23)
  br label %25

25:                                               ; preds = %22, %1
  ret void
}

declare dso_local i32 @vlc_sem_wait(i32*) #1

declare dso_local i32 @vlc_sem_post(i32*) #1

declare dso_local i32 @vout_display_Delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
